fix row alignment

--- a/src/main/webapp/resources/static/style.css
+++ b/src/main/webapp/resources/static/style.css
@@ -15,7 +15,7 @@ section {
 	align-items: center;
 	gap: 4px;
 
-	td.status {
+	td.status span {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
@@ -40,6 +40,7 @@ section table {
 			max-width: 200px;
 			overflow: hidden;
 			text-overflow: ellipsis;
+			vertical-align: middle;
 		}
 	}
 
